# gc_sdk

./: makefile  mkdocs.yml  pyproject.toml
docs/: README.md  classes.html  packages.html  parsers.md
examples/rpc_file_app/: agent.py  apps.py  pyproject.toml  server.py
gc_sdk/rpc/: __init__.py  agent.py  broker.py  decorators.py  parsers.py  parsers_test.py  target.py
tests/: broker_test.py  rpc_test.py
