[tool.poetry]
name = "gc_sdk"
version = "0.1.0"
description = ""
authors = ["Rafael Figueiredo <rafael.figueiredo91@gmail.com>"]
readme = "docs/README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"
pytest = "^8.3.3"
black = "^24.8.0"
isort = "^5.13.2"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.24.0"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.40"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
