[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Rafael Figueiredo <rafael.figueiredo91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
gc_sdk = {path = "../../", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
